# pachelarr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TMDB_SETUP.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt
tests/: test_integration_prowlarr.py  test_integration_prowlarr_minimal.py  test_torbox.py  test_udp_scrape_protocol.py
tests/fixtures/: prowlarr_rm_s01e02.json
